--- a/public/scss/utils/_variables.scss
+++ b/public/scss/utils/_variables.scss
@@ -56,6 +56,6 @@ $heading-one-medium: 7.5rem;
 $heading-one-small: 4rem;
 
 // Breakpoints
-$breakpoint-small: max-width 600px;
+$breakpoint-small: 650px;
 $breakpoint-medium-small: 960px;
 $breakpoint-medium: max-width 1100px;
