--- a/public/scss/components/_big-btn.scss
+++ b/public/scss/components/_big-btn.scss
@@ -14,7 +14,8 @@
   z-index: 10;
 
   @media screen and (max-width: $breakpoint-medium-small) {
-    width: 400px;
+    width: 100%;
+    border-radius: 0;
   }
 
   &--up {
@@ -25,6 +26,10 @@
       margin: 20px auto;
       animation: float-reverse 2s infinite ease-in-out;
       height: 100px;
+    }
+
+    @media screen and (max-width: $breakpoint-small) {
+      display: none;
     }
   }
 
