--- a/public/scss/elements/_menu.scss
+++ b/public/scss/elements/_menu.scss
@@ -48,6 +48,14 @@
     left: 150px;
   }
 
+  @media screen and (max-width: $breakpoint-small) {
+    position: absolute;
+    left: 20px;
+    bottom: 20px;
+    top: auto;
+    transform: translateY(0);
+  }
+
   li {
     list-style: none;
     margin: 0 0 50px;
