--- a/public/scss/components/_big-btn.scss
+++ b/public/scss/components/_big-btn.scss
@@ -13,7 +13,7 @@
   transition: transform .3s;
   z-index: 10;
 
-  @media screen and (max-width: $breakpoint-medium-small) {
+  @media screen and (max-width: $breakpoint-small) {
     width: 100%;
     border-radius: 0;
   }
