--- a/public/scss/components/_read-more-btn.scss
+++ b/public/scss/components/_read-more-btn.scss
@@ -21,6 +21,14 @@
   text-align: center;
   line-height: 47px;
 
+  @media screen and (max-width: $breakpoint-small) {
+    width: 280px;
+    margin-left: -140px;
+    font-size: 2.5rem;
+    height: 80px;
+    padding: 15px 0;
+  }
+
   &::before,
   &::after {
     content: '';
