--- a/public/scss/elements/_after-case.scss
+++ b/public/scss/elements/_after-case.scss
@@ -8,6 +8,10 @@
   left: 0;
   right: 0;
   z-index: 0;
+
+  @media screen and (max-width: $breakpoint-small) {
+    height: 350px;
+  }
 }
 
 .after-case__nav {
