--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -11,6 +11,14 @@
   margin-top: -250px;
   overflow: visible !important;
 
+  @media screen and (max-width: $breakpoint-small) {
+    width: 100%;
+    height: 100vh;
+    padding: 0;
+    margin: 0;
+    top: auto;
+  }
+
   @media screen and (min-width: 1200px) and (min-height: 880px) {
     transform: scale(1.2) !important;
   }
@@ -24,6 +32,10 @@
   height: 100%;
   padding-left: 120px;
   top: 0 !important;
+
+  @media screen and (max-width: $breakpoint-small) {
+    padding-left: 0;
+  }
 }
 
 .cases {
@@ -59,6 +71,12 @@
 .letter-wrapper {
   filter: url('#goo');
   overflow: hidden;
+
+  @media screen and (max-width: $breakpoint-small) {
+    top: 50%;
+    position: relative;
+    transform: translateY(-50%)
+  }
 
   .touchevents & {
     filter: none;
