--- a/public/scss/elements/cases-start/_cases-nav.scss
+++ b/public/scss/elements/cases-start/_cases-nav.scss
@@ -4,6 +4,10 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 5;
+
+  @media screen and (max-width: $breakpoint-small) {
+    display: none;
+  }
 }
 
 .btn-up {
