--- a/public/scss/content/_case.scss
+++ b/public/scss/content/_case.scss
@@ -12,6 +12,10 @@
     text-align: center;
     margin: 0 auto 50px;
 
+    @media screen and (max-width: $breakpoint-small) {
+      margin: 0 auto 25px;
+    }
+
     &::after {
       content: '';
       height: 5px;
