--- a/public/scss/elements/cases-start/_case-text.scss
+++ b/public/scss/elements/cases-start/_case-text.scss
@@ -16,6 +16,10 @@
     left: -160px;
     @include font-size(3.8, 1.5);
   }
+
+  @media screen and (max-width: $breakpoint-small) {
+    top: 50px;
+  }
 }
 
 .cases__wrapper__article__bottom-right {
@@ -35,6 +39,10 @@
     margin-left: -50px;
     right: -110px;
     @include font-size(3.8, 1.5);
+  }
+
+  @media screen and (max-width: $breakpoint-small) {
+    bottom: 50px;
   }
 }
 
