--- a/public/scss/content/_cv.scss
+++ b/public/scss/content/_cv.scss
@@ -172,9 +172,9 @@
   left: 50px;
 
   @media screen and (max-width: $breakpoint-small) {
-    height: 30px;
+    height: 25px;
     width: 160px;
-    top: 38%;
+    top: 95px;
     left: 80px;
     transform: translateY(-50%);
   }
