--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -17,6 +17,15 @@
     padding: 0;
     margin: 0;
     top: auto;
+
+    .cv & {
+      width: 350px;
+      height: 350px;
+      top: 50%;
+      margin-top: -175px;
+      left: 50%;
+      margin-left: -175px;
+    }
   }
 
   @media screen and (min-width: 1200px) and (min-height: 880px) {
