--- a/public/scss/elements/cases-start/_case-text.scss
+++ b/public/scss/elements/cases-start/_case-text.scss
@@ -21,6 +21,10 @@
     top: 20%;
     left: -40px;
     @include font-size(2.8, 1.3);
+
+    .cv & {
+      top: 0;
+    }
   }
 
   &.active-fade {
@@ -65,6 +69,10 @@
   @media screen and (max-width: $breakpoint-small) {
     bottom: 20%;
     @include font-size(2.8, 1.3);
+
+    .cv & {
+      bottom: 0;
+    }
   }
 
   &.active-fade {
