Added scroll indicator for small screens and minor small screen fixes

--- a/public/scss/content/_case.scss
+++ b/public/scss/content/_case.scss
@@ -82,7 +82,7 @@
       width: auto;
 
       @media screen and (max-width: $breakpoint-small) {
-        width: 1500px;
+        display: none;
       }
     }
   }
