--- a/public/scss/elements/_menu.scss
+++ b/public/scss/elements/_menu.scss
@@ -39,12 +39,11 @@
 }
 
 .menu__nav {
-  position: absolute;
+  position: fixed;
   left: 50px;
   bottom: 50px;
 
   @media screen and (max-width: $breakpoint-small) {
-    position: absolute;
     left: 20px;
     bottom: 20px;
   }
