--- a/public/scss/elements/cases-start/_case-text.scss
+++ b/public/scss/elements/cases-start/_case-text.scss
@@ -20,7 +20,7 @@
   @media screen and (max-width: $breakpoint-small) {
     top: 20%;
     left: -40px;
-    @include font-size(2.8, 1.3);
+    @include font-size(2.4, 1.3);
 
     .cv & {
       top: 0;
@@ -67,8 +67,10 @@
   }
 
   @media screen and (max-width: $breakpoint-small) {
-    bottom: 20%;
-    @include font-size(2.8, 1.3);
+    bottom: 25%;
+    right: 0;
+    @include font-size(2.4, 1.3);
+    margin-left: 0;
 
     .cv & {
       bottom: 0;
