Bug fixes :mask: :wave: :wave:

--- a/public/scss/components/_big-btn.scss
+++ b/public/scss/components/_big-btn.scss
@@ -1,6 +1,6 @@
 .big-btn {
   background: linear-gradient(135deg, $pink, $pinkred);
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
