--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -94,9 +94,9 @@
     left: 50%;
   }
 
-  // .touchevents & {
-  //   filter: none;
-  // }
+  .touchevents & {
+    filter: none;
+  }
 
   svg {
     width: 100%;
