--- a/public/scss/elements/start/_viz.scss
+++ b/public/scss/elements/start/_viz.scss
@@ -12,6 +12,10 @@
   @media screen and (max-width: 750px) {
     display: none;
   }
+
+  .touchevents & {
+    display: none;
+  }
 }
 
 .visualizer--bg {
