Bug fixes and copy fixes.

--- a/public/scss/content/_cv.scss
+++ b/public/scss/content/_cv.scss
@@ -42,6 +42,7 @@
       float: none;
       display: block;
       margin: 0 auto 20px;
+      box-shadow: 0 0 15px $black-three;
     }
 
     &--left {
