--- a/public/scss/layout/_case.scss
+++ b/public/scss/layout/_case.scss
@@ -9,7 +9,7 @@
   margin-bottom: 550px;
   z-index: 3;
   position: relative;
-  box-shadow: 0 0 50px rgba(53, 23, 48, 0.3);
+  box-shadow: 0 0 50px $black-three;
   padding-bottom: 50px;
 
   @media screen and (max-width: $breakpoint-small) {
