--- a/public/scss/utils/_variables.scss
+++ b/public/scss/utils/_variables.scss
@@ -22,6 +22,7 @@ $black-three: rgba(0, 0, 0, .3);
 $lighter-grey: #e7eaef;
 $case-grey: #f6fcff;
 
+$black-three: rgba(53, 23, 48, .3);
 $black-four: rgba(0, 0, 0, .08);
 
 // menu colors
@@ -31,8 +32,8 @@ $menu-two: #fdf28e;
 $menu-three: #86c5fc;
 $menu-four: #e8c3fd;
 
-$menu-five: #fc7b7b;
-$menu-six: #a6c1ff;
+$menu-five: #9abdeb;
+$menu-six: #80f9b7;
 
 $text: #2a283a;
 $grey: #888;
