--- a/public/scss/content/_cv.scss
+++ b/public/scss/content/_cv.scss
@@ -119,7 +119,7 @@
 
     @media screen and(max-width: $breakpoint-medium-small) {
       @include font-size(8, 1);
-      margin: 0 0 20px 0;
+      margin: 0 0 20px;
     }
 
     @media only screen and(max-width: $breakpoint-small) {
@@ -137,7 +137,7 @@
   padding: 50px 0 0;
 
   a {
-    @extend h2;
+    @extend %h2;
     @include underline-from-center-button($light-grey, 1px);
     text-decoration: none;
     color: $text;
