--- a/public/scss/elements/cases-start/_case-start.scss
+++ b/public/scss/elements/cases-start/_case-start.scss
@@ -49,7 +49,7 @@
 }
 
 .cases {
-  background: linear-gradient(135deg, $white, 80%, #f6fcff);
+  background: linear-gradient(135deg, $white, 80%, $case-grey);
   height: 100vh;
   width: 100%;
   z-index: 0;
