--- a/public/scss/elements/cases-start/_case-text.scss
+++ b/public/scss/elements/cases-start/_case-text.scss
@@ -1,7 +1,7 @@
 .cases__wrapper__article__top-left {
   @include font-size(4.4, 1.5);
   text-align: left;
-  color: #e7eaef;
+  color: $lighter-grey;
   letter-spacing: 10px;
   margin: 0;
   float: left;
@@ -12,15 +12,15 @@
   top: 0;
 
   @media screen and(max-width: $breakpoint-medium-small) {
+    @include font-size(3.8, 1.5);
     margin-left: -50px;
     left: -160px;
-    @include font-size(3.8, 1.5);
   }
 
   @media screen and (max-width: $breakpoint-small) {
+    @include font-size(2.4, 1.3);
     top: 20%;
     left: -40px;
-    @include font-size(2.4, 1.3);
 
     .cv & {
       top: 0;
@@ -41,6 +41,7 @@
     opacity: 0;
     visibility: hidden;
   }
+
   100% {
     opacity: 1;
     visibility: visible;
@@ -50,7 +51,7 @@
 .cases__wrapper__article__bottom-right {
   @include font-size(4.4, 1.5);
   text-align: left;
-  color: #e7eaef;
+  color: $lighter-grey;
   letter-spacing: 10px;
   margin: 0;
   float: left;
@@ -61,15 +62,15 @@
   bottom: 0;
 
   @media screen and(max-width: $breakpoint-medium-small) {
+    @include font-size(3.8, 1.5);
     margin-left: -50px;
     right: -110px;
-    @include font-size(3.8, 1.5);
   }
 
   @media screen and (max-width: $breakpoint-small) {
+    @include font-size(2.4, 1.3);
     bottom: 25%;
     right: 0;
-    @include font-size(2.4, 1.3);
     margin-left: 0;
 
     .cv & {
@@ -95,7 +96,7 @@
   right: 0;
   text-align: center;
   letter-spacing: 3px;
-  color: #2a283a;
+  color: $text;
 
   @media screen and(max-width: $breakpoint-small) {
     bottom: 80px;
