--- a/public/scss/utils/_variables.scss
+++ b/public/scss/utils/_variables.scss
@@ -21,6 +21,7 @@ $grey-pink: #f3eaf4;
 $black-three: rgba(0, 0, 0, .3);
 $lighter-grey: #e7eaef;
 $case-grey: #f6fcff;
+$dark-pink: #140a10;
 
 $black-three: rgba(53, 23, 48, .3);
 $black-four: rgba(0, 0, 0, .08);
